<resources>
	<string name="app_name">SnoopSnitch</string>
    <string name="website">http://opensource.srlabs.de/projects/snoopsnitch</string>
    <string name="common_silent_sms">Silent SMS</string>
    <string name="common_binary_sms">Binary SMS</string>
    <string name="common_imsi_catcher">IMSI Catcher</string>
    <string name="common_3g_title">3G</string>
    <string name="common_2g_title">2G</string>
    <string name="actionBar_title">SnoopSnitch</string>
    <string name="actionBar_subTitle">App-ID: 1324687436-D</string>
   	<string name="action_scan">Scan</string>
    <string name="action_map">Map</string>
    <string name="action_info">Info</string>
    <string name="action_upload_pending_files">Upload pending files</string>
    <string name="action_active_test_advanced">Active test (advanced mode)</string>
    <string name="action_upload_suspicious_dumps">Upload suspicious activity</string>
    <string name="action_upload_debug_logs">Upload debug logs</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="common_button_upload">upload</string>
    <string name="common_button_nodata">No data</string>
    <string name="common_button_networktest_start">Start Test</string>
    <string name="common_button_networktest_stop">Stop Test</string>
    <string name="message_smsDetected">New SMS detected&#8230;</string>
    <string name="message_imsiCatcherDetected">New IMSI catcher detected&#8230;</string>
    <string name="message_recordingStarted">Recording started&#8230;</string>
    <string name="message_recordingStopped">Recording stopped&#8230;</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_quit">Quit</string>
    <string name="alert_confirmation_title">Confirmation</string>
    <string name="alert_fatal_condition_title">Fatal Condition</string>
    <string name="alert_notification_title">Notification</string>
    <string name="alert_deviceCompatibility_title">Compatibility check failed</string>
<string name="alert_deviceCompatibility_header">
Your device is not compatible with SnoopSnitch.\n
</string>
<string name="alert_deviceCompatibility_message">
You need a rooted device with a Qualcomm chipset running stock Android 4.1 or higher.
Unfortunately, custom ROMs are unsupported as they lack necessary proprietary drivers.\n
\n
For details, visit the project website (http://opensource.srlabs.de/projects/snoopsnitch).
If you believe your device is compatible and this is an error, please send an email to our
list gsmmap@lists.srlabs.de.
</string>
<string name="alert_upload_message">
Thank you for contributing radio data related to this security event
and supporting SnoopSnitch research and development!\n
\n
Please send details about this incident to snoopsnitch@srlabs.de
(PGP fingerprint 9728 A7F9 D457 1FBB 746F  5381 D52C AC10 634A 9561).
Do not forget your App-ID and the time the event happened. Thank you!\n
\n
This upload is encrypted. Keep in mind that radio traces may contain
private data and location information. Have a look at the
privacy policy on our project website on how we protect your data
(http://opensource.srlabs.de/projects/snoopsnitch).
</string>
<string name="alert_networktest_message">
The active network test collects security information about your current
mobile network by sending and receiving a number of SMS and by placing and
receiving a number of automatic calls. It is normal to receive error
status SMS from your operator during that test.\n
\n
The test should be free of charge. HOWEVER, YOUR OPERATOR MAY CHARGE YOU FOR
OUTGOING SMS EVEN IF SENT TO AN INVALID DESTINATION!\n

\n
YOU MUST ONLY ENTER YOUR OWN PHONE NUMBER IN THE NEXT DIALOG. DO NOT PICK
UP THE PHONE WHEN THE SERVER CALLS. IF YOU DO SO, YOUR NUMBER WILL GET
BLACKLISTED AND BANNED FROM OUR SERVICE.\n
</string>
<string name="alert_networktest_privacy_disclaimer">
Following the test, the resulting radio data is uploaded to our servers
automatically. If you do not agree with this, press Cancel now and disable
recording for active tests in the settings menu.\n
\n
Note that radio traces may contain private data and location information as a
side effect. Have a look at the privacy policy on our project website on how we
protect your data (http://opensource.srlabs.de/projects/snoopsnitch).\n
</string>
<string name="alert_first_app_start_message">
Welcome! This is your first time running SnoopSnitch.\n
\n
READ THIS MESSAGE CAREFULLY BEFORE PROCEEDING!\n
\n
SnoopSnitch collects and analyzes mobile radio data to make you aware
of your mobile network security and to warn you about threats like fake base
stations, user tracking and over-the-air updates.\n
\n
This application uses data contributed by other users. By choosing to upload your
measurement results or security events, you can help improve this data base and
support future research.\n
\n
SnoopSnitch will ask for confirmation whenever any of your information is uploaded to
our servers. All uploads are encrypted. Note that uploaded radio traces may contain
private information as a side-effect. See our privacy policy on the project website\n
for further information (http://opensource.srlabs.de/projects/snoopsnitch).\n
\n
Raw radio data is stored encrypted on your phone. However, for the continuous security
analysis, SnoopSnitch needs to maintain data that may be used to reconstruct your movements
and possibly message contents. This information is cleaned regularly - make sure to
configure a cleanup interval that suits your needs.\n
\n
If SnoopSnitch\'s way of functioning concerns you, press Cancel now!
</string>
<string name="about_text">
SnoopSnitch collects and analyzes mobile radio data to make you aware
of your mobile network security and to warn you about threats like fake base
stations, user tracking, and over-the-air updates.\n
\n
This application uses data contributed by other users. By choosing to upload your
measurement results or security events, you can help improve this data base and
support future research.\n
\n
SnoopSnitch will ask for confirmation whenever any of your information is uploaded to
our servers. All uploads are encrypted. Note that uploaded radio traces may contain
private information as a side-effect.\n
\n
If you have questions or want to contribute to SnoopSnitch, please send an email to
our mailing list gsmmap@lists.srlabs.de. For a private conversion with the SnoopSnitch
team, please contact snoopsnitch@srlabs.de (PGP fingerprint 9728 A7F9 D457 1FBB 746F  
5381 D52C AC10 634A 9561).\n
\n
SnoopSnitch is open-source software released under the GPL license version 3.
Visit our  project website for source code and further information:\n
\n
http://opensource.srlabs.de/projects/snoopsnitch\n

</string>
    <string name="dashboard_upload_description"> scans are ready to upload</string>
    <string name="dashboard_lastanalysis">Last analysis: </string>
    <string name="dashboard_lastanalysis_time"></string>
    <string name="dashboard_sms_description">SMS &amp; SS7 attacks</string>
    <string name="dashboard_imsi_description">IMSI catcher</string>
    <string name="dashboard_timeline_month">m</string>
    <string name="dashboard_timeline_week">w</string>
    <string name="dashboard_timeline_lasthour">last hour</string>
    <string name="dashboard_timeline_today">24 hours</string>
    <string name="dashboard_network_security_title">Network Security</string>
    <string name="dashboard_network_security_provider_scrollview_header">Provider results in comparison:</string>
    <string name="dashboard_network_security_interception_title">Intercept</string>
    <string name="dashboard_network_security_impersonation_title">Impersonation</string>
    <string name="dashboard_network_security_protectionLevel_high">higher\nprotection</string>
    <string name="dashboard_network_security_protectionLevel_low">lower\nprotection</string>
    <string name="detailChart_title_month">Last weeks</string>
    <string name="detailChart_title_week">Last 7 days</string>
    <string name="detailChart_title_day">Last 24 hours</string>
    <string name="detailChart_title_hour">Last hour</string>
  	<string name="settings_actionBar_title">Settings</string>
    <string name="settings_basebandlogkeepduration_title">Baseband log clean interval</string>
    <string name="settings_basebandlogkeepduration_summary">Radio traces are purged from the phone that often</string>
    <string name="settings_basebandlogkeepduration_dialogtitle">Select interval:</string>
    <string name="settings_locationlogkeepduration_title">Location log clean interval</string>
    <string name="settings_locationlogkeepduration_summary">Information about your location is purged from the phone that often</string>
    <string name="settings_locationlogkeepduration_dialogtitle">Select interval:</string>
    <string name="settings_analysiskeepduration_title">Analysis data clean interval</string>
    <string name="settings_analysiskeepduration_summary">Data from catcher and event analysis is purged from the phone that often</string>
    <string name="settings_analysiskeepduration_dialogtitle">Select interval:</string>
    <string name="settings_debuglogkeepduration_title">Debug log clean interval</string>
    <string name="settings_debuglogkeepduration_summary">Debug logs are purged from the phone that often</string>
    <string name="settings_debuglogkeepduration_dialogtitle">Select interval:</string>
    <string name="settings_gpsrecording_title">Record GPS location</string>
    <string name="settings_gpsrecording_summary">Use fine-grained GPS-based location recording to get location information for IMSI catcher and security events</string>
    <string name="settings_networklocationrecording_title">Record network location</string>
    <string name="settings_networklocationrecording_summary">Use coarse-grained network-based location recording to get location information for IMSI catcher and security events</string>
    <string name="settings_unencryptedlogfilesrecording_title">Unencrypted log files</string>
    <string name="settings_unencryptedlogfilesrecording_summary">Record log files in plaintext. Sensitive information is NOT removed from the device for you!</string>
    <string name="settings_unencrypteddumpfilesrecording_title">Unencrypted radio data</string>
    <string name="settings_unencrypteddumpfilesrecording_summary">Record dump files in plaintext. Sensitive information is NOT removed from the device for you!</string>
    <string name="settings_encrypteddumpfilesrecording_title">Encrypted radio data</string>
    <string name="settings_encrypteddumpfilesrecording_summary">Store radio data encrypted with our public key.</string>
    <string name="settings_applicationid_title">App ID</string>
    <string name="settings_applicationid_summary">Your can use your app ID to hint us at the files you uploaded. Refresh it anytime by tapping here.</string>
    <string name="settings_active_test_force_offline_title">Force offline test</string>
    <string name="settings_active_test_force_offline_summary">Force using offline mode in active test. No data connection is used in this case.</string>
    <string name="settings_active_test_num_iterations_title">Active test iterations</string>
    <string name="settings_active_test_num_iterations_dialogtitle">Number of iterations for each active test.</string>
    <string name="settings_active_test_disable_upload_title">Don\'t upload test results</string>
    <string name="settings_active_test_disable_upload_summary">Evaluate active test results on the phone only. No radio data is uploaded to our servers in this case.</string>
    <string name="settings_cat_location">Location Recording</string>
     <string name="listview_imsi_item_position">Location:</string>
     <string name="listview_imsi_item_cellid">Cell ID:</string>
</resources>