<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  
    <item android:id="@+id/menu_action_scan"
          android:icon="@drawable/ic_menu_record_disable"
          android:title="@string/action_scan"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_action_map"
          android:icon="@drawable/ic_menu_map_disable"
          android:title="@string/action_map"
          android:showAsAction="ifRoom" />
    
    <!-- Items of the more menu -->
  	<item
        android:id="@+id/menu_action_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item
        android:id="@+id/menu_action_about"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
